2002-07-26  Simon Josefsson  <jas@extundo.com>

	* lisp/bbdb.el (bbdb-quiet-about-name-mismatches): Fix typo.

2002-07-03  Waider  <waider@waider.ie>

	* texinfo/bbdb.texinfo (Customization Parameters):
	bbdb-complete-name-allow-cycling /does/ work in GNUmacs.

	* Eli Tziperman's fix for rmail expunge problem

2002-06-30  Waider  <waider@waider.ie>

	* lisp/bbdb-ftp.el
	(bbdb-read-new-ftp-site-record): Parse URL or ange-ftp style names
	for username and directory.

	* bits/bbdb-obsolete.el
	Added. This is some code from Colin Rafferty which allows you to
	keep track of obsolete network addresses while preventing you from
	completing on them.

	* lisp/bbdb-snarf.el 
	(bbdb-snarf-phone-regexp): Don't escape '.' in [] (Howard Melman)

	* lisp/bbdb-com.el
	(bbdb-phone-main-regexp): Allow '.' as a separator (Howard Melman)
	(bbdb-finger): Don't try to finger if there are no addresses

2002-06-29  Waider  <waider@waider.ie>

	* configure.ac:
	Don't configure the testing directory if it doesn't exist.

2002-06-28  Robert Fenk  <Robert.Fenk@gmx.de>

	* lisp/bbdb-com.el (bbdb-rebuilt-all-aliases): applied a fix from
	Andre Srinivasan

2002-04-30  Robert Fenk  <Robert.Fenk@gmx.de>

	* lisp/bbdb-com.el (bbdb-play-sound): argument NUM is integer now.
	(bbdb-sound-player): If set use this programm, otherwise try
	native sound support.
	(bbdb-dial-number): Calculate the right integer, i.e. do not use
	char-int.

2002-04-18  Robert Fenk  <Robert.Fenk@gmx.de>

	* lisp/bbdb-gui.el (build-bbdb-insert-field-menu): Added record to
	the arguments for bbdb-insert-new-field.

	* lisp/bbdb-com.el (bbdb-read-new-record): Added completion for
	labels.

	* lisp/bbdb-vm.el (bbdb/vm-show-all-recipients),
			  (bbdb/vm-show-sender),
	  lisp/bbdb-gnus.el (bbdb/gnus-show-sender),
	                    (bbdb/gnus-show-all-recipients):
        Fixed  */show-all-reciepients to always do what it should do!

2002-04-10  Dave Love  <fx@gnu.org>
