@@ -1,3 +1,9 @@
+2002-08-19  Jim Blandy  <jimb@redhat.com>
+
+	* lisp/bbdb-migrate.el (bbdb-migrate-change-dates,
+	bbdb-unmigrate-change-dates): The raw notes field isn't always an
+	alist; it can also be a simple string.
+
 2002-07-26  Simon Josefsson  <jas@extundo.com>
 
 	* lisp/bbdb.el (bbdb-quiet-about-name-mismatches): Fix typo.
